feat: add api patient counters
